
ESCM ChangeLog

working three	***

	- several things moved where they belong.
	- fatal error resolved by using callback.

0.0.1		first alpha			2008-04-03

pre-0		pre-version

	this contains all teh versions which really had bugzorz.
	Covers development from zero to the running and show-able state.
	It was a really slow process, just to notice...
	
0		project started			2007-06-04
